Fixed being able to move on mobile. Attempt to improve perf:5

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,16 @@ th {
 #scoreTable td {
 	text-align: center;
 }
+
+.bill {
+    max-width: 100%;
+}
+
+.shield {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+}
